--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,23 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Payment Gateway Configuration
+PAYMENT_GATEWAY=stripe
+PAYMENT_CURRENCY=USD
+PAYMENT_TAX_RATE=0
+
+# Stripe Configuration
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_TEST_MODE=true
+
+# PayPal Configuration
+PAYPAL_CLIENT_ID=
+PAYPAL_CLIENT_SECRET=
+PAYPAL_WEBHOOK_ID=
+PAYPAL_TEST_MODE=true
+
+# Proxy Configuration
+PROXY_AUTO_RENEWAL_ENABLED=false
