--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^10.4",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "stripe/stripe-php": "^19.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
